{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 16,
  "lineage": "bebab807-8d5b-ad49-42e6-7954058f4e9e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ports_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-16T21:13:21.208-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/impactful-post-402223/global/firewalls/allow-ports-3000",
            "log_config": [],
            "name": "allow-ports-3000",
            "network": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/global/networks/default",
            "priority": 1000,
            "project": "impactful-post-402223",
            "self_link": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/global/firewalls/allow-ports-3000",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ports_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-10-16T21:13:20.879-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/impactful-post-402223/global/firewalls/allow-ports-8080",
            "log_config": [],
            "name": "allow-ports-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/global/networks/default",
            "priority": 1000,
            "project": "impactful-post-402223",
            "self_link": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/global/firewalls/allow-ports-8080",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backend-vm-from-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/zones/australia-southeast1-a/disks/backend-vm-from-terraform"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/impactful-post-402223/zones/australia-southeast1-a/instances/backend-vm-from-terraform",
            "instance_id": "651718198907090700",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "CmIBLt4e7w8=",
            "metadata_startup_script": "#!/bin/bash\nif [ ! -f /var/run/my_script_ran_before ]; then\n    # Mark that the script has run before\n    sudo touch /var/run/my_script_ran_before\n\n    # Install the Ops Agent\n    curl -sSO https://dl.google.com/cloudagents/add-google-cloud-ops-agent-repo.sh\n    sudo bash add-google-cloud-ops-agent-repo.sh --also-install\n    sudo apt-get update\n    sudo apt-get -y install ops-agent\n\n    # Execute the desired script\n    cd /\n    wget https://go [...]
            "name": "backend-vm-from-terraform",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.104.175",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/global/networks/default",
                "network_ip": "10.152.0.18",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/regions/australia-southeast1/subnetworks/default",
                "subnetwork_project": "impactful-post-402223"
              }
            ],
            "project": "impactful-post-402223",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/zones/australia-southeast1-a/instances/backend-vm-from-terraform",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "australia-southeast1-a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "frontend-vm-from-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20231010",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/zones/australia-southeast1-a/disks/frontend-vm-from-terraform"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/impactful-post-402223/zones/australia-southeast1-a/instances/frontend-vm-from-terraform",
            "instance_id": "1953614926258091805",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "8gvO50D-McU=",
            "metadata_startup_script": "#!/bin/bash\nif [ ! -f /var/run/my_script_ran_before ]; then\n    # Mark that the script has run before\n    sudo touch /var/run/my_script_ran_before\n\n    # Install the Ops Agent\n    curl -sSO https://dl.google.com/cloudagents/add-google-cloud-ops-agent-repo.sh\n    sudo bash add-google-cloud-ops-agent-repo.sh --also-install\n    sudo apt-get update\n    sudo apt-get -y install ops-agent\n\n    # Execute the desired script\n    cd /\n    apt-get -y upda [...]
            "name": "frontend-vm-from-terraform",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.87.228.160",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/global/networks/default",
                "network_ip": "10.152.0.19",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/regions/australia-southeast1/subnetworks/default",
                "subnetwork_project": "impactful-post-402223"
              }
            ],
            "project": "impactful-post-402223",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/impactful-post-402223/zones/australia-southeast1-a/instances/frontend-vm-from-terraform",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "australia-southeast1-a"
          },
          "dependencies": [
            "google_compute_instance.backend-vm-from-terraform"
          ]
        }
      ]
    }
  ]
}